--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </aside>
 
 <footer>
-                                                             <a href="mailto:icoconferences.outlook.com">Email Us</a><br>
+                                                             <a href="mailto:icoicoconferences@outlook.com">Email Us</a><br>
 
                                     <a href="privacy.html">privacy policy</a>
         <p>&copy; 2021-2024 ICO Conference</p>
